# Occultism-Agent

./: LICENSE  README.md  pyproject.toml
occultismsystem/: README.md  pyproject.toml  report.md
occultismsystem/knowledge/: user_preference.txt
occultismsystem/src/occultismsystem/: crew.py  main.py
occultismsystem/src/occultismsystem/config/: tasks.yaml
src/occultism_agent/: crew.py  main.py
src/occultism_agent/config/: agents.yaml  tasks.yaml
