[project]
name = "occultism_agent"
version = "0.1.0"
description = "Occultism-Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
occultism_agent = "occultism_agent.main:run"
run_crew = "occultism_agent.main:run"
train = "occultism_agent.main:train"
replay = "occultism_agent.main:replay"
test = "occultism_agent.main:test"
run_with_trigger = "occultism_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
